build & Fix: add Laporan Kinerja FE and add some fixes